--- a/res/layout/activity_forgot_password.xml
+++ b/res/layout/activity_forgot_password.xml
@@ -1,10 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context="com.lb.jbt.LoginActivity" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,10 +19,10 @@
     </LinearLayout>
 
     <ScrollView
-        android:id="@+id/login_items_layout"
+        android:id="@+id/forgot_pwd_items_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="9"
         android:background="@color/light_grew_bg"
         android:scrollbars="none" >
 
@@ -40,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:text="@string/login_title"
+                android:text="@string/forgot_pwd_title"
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/title_text_size" />
 
@@ -102,41 +100,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="6"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true" >
-
-                    <TextView
-                        android:id="@+id/stu_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/login_item_height"
-                        android:background="@null"
-                        android:gravity="center_vertical"
-                        android:hint="@string/login_name_hint"
-                        android:padding="@dimen/login_item_padding"
-                        android:singleLine="true"
-                        android:textSize="@dimen/type_text_size" />
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/con_des"
-                    android:src="@drawable/name" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:background="@color/white_bg"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/login_item_padding" >
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
                     android:gravity="center_vertical" >
 
                     <Spinner
@@ -170,90 +133,17 @@
                     android:src="@drawable/maslul" />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:background="@color/white_bg"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="@dimen/login_item_padding" >
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true" >
-
-                    <EditText
-                        android:id="@+id/stu_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/login_item_height"
-                        android:background="@null"
-                        android:gravity="center_vertical|end"
-                        android:inputType="textPassword"
-                        android:padding="@dimen/login_item_padding"
-                        android:singleLine="true"
-                        android:textSize="@dimen/type_text_size" />
-
-                    <TextView
-                        android:id="@+id/stu_pwd_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBaseline="@+id/stu_pwd"
-                        android:layout_alignBottom="@+id/stu_pwd"
-                        android:layout_alignParentRight="true"
-                        android:padding="@dimen/login_item_padding"
-                        android:text="@string/login_pwd_hint"
-                        android:textColor="@color/hint_text"
-                        android:textSize="@dimen/type_text_size" />
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/con_des"
-                    android:src="@drawable/key" />
-            </LinearLayout>
-
             <Button
                 android:id="@+id/user_login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/login_btn_height"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/main_menu_item_height"
                 android:background="@drawable/common_btn_style"
                 android:gravity="center"
-                android:text="@string/login_btn_text"
+                android:text="@string/change_pwd_btn"
                 android:textColor="@color/white_text"
                 android:textSize="@dimen/title_text_size" />
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/deep_grew_bg"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/forgot_pwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:background="@drawable/text_botton_line"
-            android:text="@string/forgot_pwd"
-            android:textColor="@color/white_text"
-            android:textSize="@dimen/type_text_size" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mandatory_text"
-            android:textColor="@color/white_text"
-            android:textSize="@dimen/type_text_size" />
-    </LinearLayout>
 
 </LinearLayout>
