finish forgot password and start recommend friend

--- a/res/layout/activity_forgot_password.xml
+++ b/res/layout/activity_forgot_password.xml
@@ -134,7 +134,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/user_login_btn"
+                android:id="@+id/forget_pwd_btn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/login_btn_height"
                 android:layout_marginTop="@dimen/main_menu_item_height"
