--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,11 +7,12 @@
     <dimen name="login_item_padding">4dp</dimen>
     <dimen name="dialog_text_padding">20dp</dimen>
     <dimen name="login_item_height">40dp</dimen>
-    <dimen name="title_text_size">30sp</dimen>
-    <dimen name="type_text_size">16sp</dimen>
     <dimen name="login_btn_height">50dp</dimen>
     <dimen name="menu_item_title">60dp</dimen>
     <dimen name="main_menu_item_height">80dp</dimen>
     <dimen name="main_menu_item_padding">6dp</dimen>
+    <dimen name="title_text_size">30sp</dimen>
+    <dimen name="type_text_size">16sp</dimen>
+    <dimen name="contacts_text_size">12sp</dimen>
 
 </resources>
