--- a/res/layout/recommend_friend_fragment.xml
+++ b/res/layout/recommend_friend_fragment.xml
@@ -229,8 +229,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/activity_horizontal_margin"
-                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:orientation="vertical"
                 android:paddingLeft="@dimen/login_items_padding"
                 android:paddingRight="@dimen/login_items_padding" >
 
@@ -242,7 +243,7 @@
                     android:gravity="center_vertical"
                     android:orientation="horizontal" >
 
-                    <Button
+                    <TextView
                         android:layout_width="0dp"
                         android:layout_height="@dimen/login_btn_height"
                         android:layout_weight="8"
@@ -261,23 +262,28 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/contact_type_items"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:orientation="vertical"
+                    android:visibility="gone" >
 
                     <Button
+                        android:id="@+id/read_local_contacts"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/login_item_height"
                         android:background="@drawable/contacts_items_border"
                         android:text="@string/recommend_local_contact" />
 
                     <Button
+                        android:id="@+id/read_google_contacts"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/login_item_height"
                         android:background="@drawable/contacts_items_border"
                         android:text="@string/recommend_google_contact" />
 
                     <Button
+                        android:id="@+id/read_outlook_contacts"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/login_item_height"
                         android:background="@color/white_bg"
