--- a/res/layout/activity_contact_details.xml
+++ b/res/layout/activity_contact_details.xml
@@ -37,11 +37,11 @@
         android:background="@color/light_grew_bg"
         android:orientation="vertical" >
 
-        <ListView
-            android:id="@+id/contacts_list"
+        <ExpandableListView
+            android:id="@+id/contact_details_lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-        </ListView>
+        </ExpandableListView>
     </LinearLayout>
 
 </LinearLayout>
