--- a/res/layout/contact_details_title.xml
+++ b/res/layout/contact_details_title.xml
@@ -5,8 +5,8 @@
     android:background="@color/white_bg"
     android:gravity="center_vertical" >
 
-    <TextView
-        android:id="@+id/friend_name"
+    <CheckedTextView
+        android:id="@+id/detail_title_item"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/login_item_height"
         android:layout_alignParentRight="true"
