--- a/res/layout/activity_contact_details.xml
+++ b/res/layout/activity_contact_details.xml
@@ -33,8 +33,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
-        android:background="@color/light_grew_bg"
+        android:layout_weight="8"
+        android:background="@color/white_bg"
         android:orientation="vertical" >
 
         <ExpandableListView
@@ -42,6 +42,26 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
         </ExpandableListView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/login_items_padding"
+        android:paddingRight="@dimen/login_items_padding" >
+
+        <Button
+            android:id="@+id/confirm_contact_btn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_btn_height"
+            android:background="@drawable/common_btn_style"
+            android:gravity="center"
+            android:text="@string/change_pwd_btn"
+            android:textColor="@color/white_text"
+            android:textSize="@dimen/title_text_size" />
     </LinearLayout>
 
 </LinearLayout>
