--- a/res/layout/activity_contacts.xml
+++ b/res/layout/activity_contacts.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
-        android:background="@color/light_grew_bg"
+        android:background="@color/white_bg"
         android:orientation="vertical" >
 
         <ListView
