--- a/res/layout/contact_details_contents.xml
+++ b/res/layout/contact_details_contents.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_bg"
     android:gravity="center_vertical"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/login_item_height"
-        android:background="@color/white_bg"
+        android:background="@drawable/dialog_title_border"
         android:gravity="center_vertical"
         android:padding="@dimen/login_item_padding" >
 
