--- a/res/layout/activity_contact_details.xml
+++ b/res/layout/activity_contact_details.xml
@@ -40,7 +40,8 @@
         <ExpandableListView
             android:id="@+id/contact_details_lv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:groupIndicator="@null" >
         </ExpandableListView>
     </LinearLayout>
 
