--- a/res/layout/contact_details_title.xml
+++ b/res/layout/contact_details_title.xml
@@ -5,6 +5,15 @@
     android:background="@color/white_bg"
     android:gravity="center_vertical" >
 
+    <ImageView
+        android:id="@+id/el_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/main_bg_img_des"
+        android:src="@drawable/more_off" />
+
     <CheckedTextView
         android:id="@+id/detail_title_item"
         android:layout_width="wrap_content"
