--- a/res/layout/my_grades_fragment.xml
+++ b/res/layout/my_grades_fragment.xml
@@ -130,6 +130,45 @@
                                 android:text="ccc" />
                         </LinearLayout>
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/login_btn_height"
+                        android:layout_marginTop="@dimen/login_item_padding"
+                        android:orientation="horizontal" >
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="3"
+                            android:orientation="vertical" >
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/my_grades_body_right_border"
+                                android:gravity="center"
+                                android:paddingLeft="@dimen/main_menu_item_padding"
+                                android:paddingRight="@dimen/main_menu_item_padding"
+                                android:text="ccc" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="7"
+                            android:orientation="vertical" >
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/white_bg"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="@dimen/main_menu_item_padding"
+                                android:paddingRight="@dimen/main_menu_item_padding"
+                                android:text="ccc" />
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -145,6 +184,7 @@
                         android:orientation="vertical" >
 
                         <TextView
+                            android:id="@+id/average_grades_value"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="@drawable/my_grades_footer_right_border"
