--- a/res/layout/grade_item_layout.xml
+++ b/res/layout/grade_item_layout.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/grade_items_parent"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/login_btn_height"
-    android:layout_marginTop="@dimen/login_item_padding"
-    android:orientation="horizontal" >
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:orientation="vertical" >
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/login_btn_height"
+        android:layout_marginTop="@dimen/login_item_padding"
+        android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/subject_score"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@drawable/my_grades_body_right_border"
-            android:gravity="center"
-            android:paddingLeft="@dimen/main_menu_item_padding"
-            android:paddingRight="@dimen/main_menu_item_padding"
-            android:text="ccc" />
-    </LinearLayout>
+            android:layout_weight="3"
+            android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="7"
-        android:orientation="vertical" >
+            <TextView
+                android:id="@+id/subject_score"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/my_grades_body_right_border"
+                android:gravity="center"
+                android:paddingLeft="@dimen/main_menu_item_padding"
+                android:paddingRight="@dimen/main_menu_item_padding"
+                android:text="ccc" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/sub_subject_title"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@color/white_bg"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/main_menu_item_padding"
-            android:paddingRight="@dimen/main_menu_item_padding"
-            android:text="ccc" />
+            android:layout_weight="7"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/sub_subject_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white_bg"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/main_menu_item_padding"
+                android:paddingRight="@dimen/main_menu_item_padding"
+                android:text="ccc" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
