--- a/res/layout/grade_item_layout.xml
+++ b/res/layout/grade_item_layout.xml
@@ -34,15 +34,22 @@
             android:layout_weight="7"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/sub_subject_title"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white_bg"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/main_menu_item_padding"
-                android:paddingRight="@dimen/main_menu_item_padding"
-                android:text="ccc" />
+                android:gravity="center_vertical|right" >
+
+                <TextView
+                    android:id="@+id/sub_subject_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@color/white_bg"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="@dimen/main_menu_item_padding"
+                    android:paddingRight="@dimen/main_menu_item_padding"
+                    android:text="ccc" />
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
