--- a/res/layout/activity_jobs_filter.xml
+++ b/res/layout/activity_jobs_filter.xml
@@ -81,6 +81,92 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding" >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:background="@color/grey_item_bg" >
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:background="@color/light_grew_bg"
+                            android:paddingLeft="@dimen/main_menu_item_padding"
+                            android:paddingRight="@dimen/main_menu_item_padding"
+                            android:text="@string/area_title"
+                            android:textColor="@color/white_text"
+                            android:textSize="@dimen/type_text_size" />
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:id="@+id/area_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white_bg"
+                        android:orientation="vertical"
+                        android:paddingLeft="@dimen/main_menu_item_padding"
+                        android:paddingRight="@dimen/main_menu_item_padding" >
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingBottom="@dimen/main_menu_item_padding"
+                        android:paddingTop="@dimen/main_menu_item_padding" >
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_centerVertical="true"
+                            android:background="@color/grey_item_bg" >
+                        </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:background="@color/light_grew_bg"
+                            android:paddingLeft="@dimen/main_menu_item_padding"
+                            android:paddingRight="@dimen/main_menu_item_padding"
+                            android:text="@string/domain_title"
+                            android:textColor="@color/white_text"
+                            android:textSize="@dimen/type_text_size" />
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:id="@+id/domain_items"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white_bg"
+                        android:orientation="vertical"
+                        android:paddingLeft="@dimen/main_menu_item_padding"
+                        android:paddingRight="@dimen/main_menu_item_padding" >
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
