--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,5 +14,6 @@
     <dimen name="title_text_size">30sp</dimen>
     <dimen name="type_text_size">16sp</dimen>
     <dimen name="contacts_text_size">12sp</dimen>
+    <dimen name="filter_check">30dp</dimen>
 
 </resources>
