--- a/res/layout/activity_jobs_filter.xml
+++ b/res/layout/activity_jobs_filter.xml
@@ -75,7 +75,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent"
+            android:scrollbars="none" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,6 +124,13 @@
                         android:paddingLeft="@dimen/main_menu_item_padding"
                         android:paddingRight="@dimen/main_menu_item_padding" >
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/area_more"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -165,6 +173,13 @@
                         android:orientation="vertical"
                         android:paddingLeft="@dimen/main_menu_item_padding"
                         android:paddingRight="@dimen/main_menu_item_padding" >
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/domain_more"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
