--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -4,10 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/msg_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="发送" />
+    <ListView
+        android:id="@+id/msg_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9" >
+    </ListView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+        <EditText
+            android:id="@+id/msg_type"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:maxLines="2" />
+
+        <Button
+            android:id="@+id/msg_send"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/msg_type"
+            android:layout_weight="2"
+            android:text="发送" />
+    </LinearLayout>
 
 </LinearLayout>
