--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -4,33 +4,45 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/msg_list_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="9" >
-    </ListView>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/msg_type"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:maxLines="2" />
+        <ListView
+            android:id="@+id/msg_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:cacheColorHint="#00000000"
+            android:divider="@null"
+            android:listSelector="#00000000" >
+        </ListView>
 
-        <Button
-            android:id="@+id/msg_send"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/msg_type"
-            android:layout_weight="2"
-            android:text="发送" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginBottom="1dp"
+            android:orientation="horizontal" >
+
+            <EditText
+                android:id="@+id/msg_type"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="8"
+                android:background="@drawable/chat_edittext"
+                android:gravity="center_vertical"
+                android:maxLines="2" />
+
+            <Button
+                android:id="@+id/msg_send"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:background="@drawable/common_btn_style"
+                android:text="@string/send_msg"
+                android:textColor="@color/white_text" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
