--- a/res/layout/chat_my_msg.xml
+++ b/res/layout/chat_my_msg.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
     <LinearLayout
         android:layout_width="0dp"
@@ -16,7 +17,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:background="@color/white_bg"
-        android:textColor="@color/black_text" />
+        android:background="@drawable/chat_bg_my"
+        android:padding="5dp"
+        android:textColor="@color/black_text"
+        android:textSize="18sp" />
 
 </LinearLayout>
